C2: can't use expand rules for vector instruction rules

XMLWordPrintable

    • b03
    • generic
    • generic

        I'd like to add rules like the following:

        instruct Repl2F_reg(vecD dst, regF src) %{
          match(Set dst (ReplicateF src));
          expand %{
            iRegI tmp;
            MoveF2I_reg_reg(tmp, src);
            Repl2F_regI(dst,tmp);
          %}
        %}

        instruct vsrl4I_regI(vecX dst, vecX src, iRegI shift) %{
          match(Set dst (URShiftVI src (MoveI2F shift)));
          expand %{
            vecX tmp;
            Repl16B_reg(tmp, shift);
            vsrl4I_reg(dst, src, tmp);
          %}
        %}

        but the generated expand code will crash because _bottom_type is not
        set.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: